recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.error
InterleavedHanoi:4: error: not found: value hanoi
  	hanoi(height-1, src1, dst, other)
        ^InterleavedHanoi:6: error: not found: value hanoi
  	hanoi(height-1, src2, dst, src1)
        ^